fixed static paths

--- a/website/Tasks/templates/Tasks/index.html
+++ b/website/Tasks/templates/Tasks/index.html
@@ -1,8 +1,6 @@
-<!-- Loads the path to the static files-->
-
-{% load staticfiles %}
+{% load static %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="(% static 'Tasks/style.css' %)" />
+<link rel="stylesheet" type="text/css" href="{% static "Tasks/style.css" %}" />
 
 <nav class = "navbar navbar-default">
     <div class=" container-fluid">
