--- a/website/Tasks/static/Tasks/style.css
+++ b/website/Tasks/static/Tasks/style.css
@@ -1,3 +1,11 @@
 body{
     background: url("images/background.jpg");
 }
+
+.navbar{
+    border-radius: 0;
+}
+
+.navbar-brand{
+    font-family: 'Satisfy', cursive;
+}
