--- a/website/Tasks/templates/Tasks/index.html
+++ b/website/Tasks/templates/Tasks/index.html
@@ -1,76 +1,19 @@
-{% load static %}
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css' >
-<link rel="stylesheet" type="text/css" href="{% static 'Tasks/style.css' %}" />
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
-<nav class = "navbar navbar-inverse">
-    <div class=" container-fluid">
+{% extends "Tasks/base.html" %}
 
-        <!-- logo -->
-        <div class = "navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class ="navbar-brand" href="{% url 'Tasks:index' %}">Process</a>
-        </div>
-
-        <div class="collapse navbar-collapse" id="topNavBar">
-
-            <ul class="nav navbar-nav">
-                <li class = "">
-                    <a href="{% url 'Tasks:index' %}">
-                        <span class="glyphicon glyphicon-cd" aria-hidden="true"></span>&nbsp; Tasks
-                    </a>
-                </li>
-                <li class = "">
-                    <a href="#">
-                        <span class="glyphicon glyphicon-music" aria-hidden="true"></span>&nbsp; Jobs
-                    </a>
-                </li>
-            </ul>
-
-            <form class="navbar-form navbar-left" role="search" method="get" action="#">
-                <div class = "form-group">
-                    <input type="text" class="form-control" name="q" value="">
-                </div>
-                <button type="submit" class="btn btn-default">Search</button>
-            </form>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li class="">
-                    <a href="#">
-                        <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Add Job
-                    </a>
-                </li>
-
-                <li class="">
-                    <a href="#">
-                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout
-                    </a>
-                </li>
-            </ul>
-
-
-        </div>
-
-    </div>
-</nav>
-
-{% if all_jobs %}
+{% block body %}
+    {% if all_jobs %}
     <h3> Here are all the Tasks at hand</h3>
     <ul>
-        {% for action in all_jobs %}
-        <li><a href = "{% url 'Tasks:detail' action.id %}">{{action.label}}
-        </a>
-        </li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <h4>
-        You don't have any jobs listed
-    </h4>
-{% endif %}
+            {% for action in all_jobs %}
+            <li><a href = "{% url 'Tasks:detail' action.id %}">{{action.label}}
+            </a>
+            </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <h4>
+            You don't have any jobs listed
+        </h4>
+    {% endif %}
+{% endblock %}
